# portfolio-tracking

./: .env  .env.sample  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  docker-dist-readme.md  package-lock.json
.github/: FUNDING.yml
backend/: .gitignore  Cargo.toml  Dockerfile  pb_schema_v035.json  test_payload.json
backend/src/: config.rs  error.rs  main.rs
backend/src/handlers/: accounts.rs  alerts.rs  api_providers.rs  auth.rs  exchange_rate.rs  job.rs  mod.rs  portfolio.rs  prices.rs  rate_limit.rs  seed.rs  snapshot.rs  symbols.rs  transactions.rs  users.rs
backend/src/models/: account.rs  alert.rs  api_provider.rs  asset.rs  job.rs  mod.rs  transaction.rs  user.rs
backend/src/services/: alert.rs  auth.rs  exchange_rate.rs  job_scheduler.rs  mod.rs  notification.rs  pocketbase.rs  price_service.rs  rate_limiter.rs  symbols.rs
backend/src/utils/: units.rs
frontend/: .gitignore  Dockerfile  entrypoint.sh  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AccountManager.tsx  (+20 more)
pocketbase/: pb_schema_alerts.json  pb_schema_api_call_logs.json  pb_schema_api_providers.json  pb_schema_api_rate_limits.json  pb_schema_asset_price_history.json
scripts/: generate-seed.js  publish-docker.sh  push-images.sh  seed-data.json  seed-snapshots.js  seed.js
tauri-app/: generate_icon.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
yahoo-finance/: Dockerfile  requirements.txt
yahoo-finance/src/: server_http.py
(+23 files in other folders)
