[package]
name = "portfolio-tauri"
version = "0.1.0"
description = "Portfolio Tracking Desktop App"
authors = ["Portfolio Team"]
edition = "2021"

[lib]
name = "portfolio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
